--- a/src/main/webapp/layuiadmin/set/user/updateAreaDialog.html
+++ b/src/main/webapp/layuiadmin/set/user/updateAreaDialog.html
@@ -15,17 +15,17 @@
 <body>
     <form class="layui-form" style="margin:20px;">
         <div class="layui-form-item">
-            <label class="layui-form-label">修改区域</label>
+            <label class="layui-form-label">修改单位</label>
             <div class="layui-input-inline">
                 <select lay-filter="area" name="area">
-                    <option value="">请选择所属区域</option>
-                    <option value="1">合江县</option>
-                    <option value="2">江阳区</option>
-                    <option value="3">龙马潭区</option>
-                    <option value="4">纳溪区</option>
-                    <option value="5">泸县</option>
-                    <option value="6">古蔺</option>
-                    <option value="7">叙永</option>
+                    <option value="">请选择所属单位</option>
+                    <option value="1">泸州市合江县烟草专卖局</option>
+                    <option value="2">泸州市江阳区烟草专卖局</option>
+                    <option value="3">泸州市龙马潭区烟草专卖局</option>
+                    <option value="4">泸州市纳溪区烟草专卖局</option>
+                    <option value="5">泸州市泸县烟草专卖局</option>
+                    <option value="6">泸州市古蔺烟草专卖局</option>
+                    <option value="7">泸州市叙永烟草专卖局</option>
                 </select>
             </div>
         </div>
