--- a/src/main/webapp/layui/register.html
+++ b/src/main/webapp/layui/register.html
@@ -38,11 +38,17 @@
             </div>
             <div class="layui-form-item">
                 <label class="layadmin-user-login-icon layui-icon layui-icon-username" ></label>
-                <input type="text" name="address" id="LAY-user-login-address" lay-verify="address" placeholder="地址" class="layui-input">
-            </div>
-            <div class="layui-form-item">
-                <label class="layadmin-user-login-icon layui-icon layui-icon-username" ></label>
-                <input type="number" name="area" id="LAY-user-login-area" lay-verify="area" placeholder="区域" class="layui-input">
+                <select lay-filter="area" lay-verify="required" name="area">
+                    <option value="">请选择所属单位</option>
+                    <option value="1">泸州市合江县烟草专卖局</option>
+                    <option value="2">泸州市江阳区烟草专卖局</option>
+                    <option value="3">泸州市龙马潭区烟草专卖局</option>
+                    <option value="4">泸州市纳溪区烟草专卖局</option>
+                    <option value="5">泸州市泸县烟草专卖局</option>
+                    <option value="6">泸州市古蔺县烟草专卖局</option>
+                    <option value="7">泸州市叙永县烟草专卖局</option>
+
+                </select>
             </div>
 		<div class="layui-form-item">
           <div class="layui-row">
@@ -133,7 +139,7 @@
             		,icon: 1
             		,time: 1000
           			}, function(){
-            			//location.href = '../'; //后台主页
+            			location.href = 'login.html'; //后台主页
           			});
         	}else if(json.status=="regtlxfailure"){
         		
