--- a/src/main/webapp/mobile/asset/onlineregs/biangen/biangen1.html
+++ b/src/main/webapp/mobile/asset/onlineregs/biangen/biangen1.html
@@ -74,6 +74,10 @@
 		.p1 {
 			color: red;
 		}
+
+		.hiddenclass {
+			display: none;
+		}
 	</style>
 </head>
 
@@ -82,6 +86,17 @@
 
 	<a id="business" class="weui-cell weui-cell_access" href="javascript:;">
 		<div id="img1" name="" class="weui-panel__bd">
+		</div>
+		<div class="weui-cell__bd">
+			<p>变更企业名称/个体工商户字号：</p>
+			<p class="p1">(工商营业执照登记的"名称"发生改变，需要提供工商营业执照)</p>
+		</div>
+		<div id="bg1" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-paizhao"></use>
+			</svg></div>
+	</a>
+	<a id="business1" class="weui-cell weui-cell_access hiddenclass" href="javascript:;">
+		<div id="img6" name="" class="weui-panel__bd">
 		</div>
 		<div class="weui-cell__bd">
 			<p>变更企业名称/个体工商户字号：</p>
@@ -102,6 +117,16 @@
 				<use xlink:href="#icon-paizhao"></use>
 			</svg></div>
 	</a>
+	<a id="changeName1" class="weui-cell weui-cell_access hiddenclass" href="javascript:;">
+		<div id="img7" name="" class="weui-panel__bd">
+		</div>
+		<div class="weui-cell__bd">
+			<p class="p1">(持证人未改变，持证人身份证登记的"姓名"发生改变，需提供公安部门出具的姓名变更证明)</p>
+		</div>
+		<div id="bg1" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-paizhao"></use>
+			</svg></div>
+	</a>
 	<a class="weui-cell weui-cell_access" href="javascript:;">
 		<div class="weui-cell__bd">
 			<p>经营者姓名变更签字</p>
@@ -109,7 +134,7 @@
 		<div id="sign" class="weui-cell__ft">点击签名</div>
 	</a>
 	<div id="displayarea" name="0"></div>
-	<a id="legal" class="weui-cell weui-cell_access" href="javascript:;">
+	<a id="legal" class="weui-cell weui-cell_access hiddenclass" href="javascript:;">
 		<div id="img3" name="" class="weui-panel__bd">
 		</div>
 		<div class="weui-cell__bd">
@@ -117,6 +142,17 @@
 			<p class="p1">(法定代表人或者其他组织负责人发生改变，需提供工商营业执照及法定代表人或其他组织负责人变更证明文件)</p>
 		</div>
 		<div id="bg3" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-paizhao"></use>
+			</svg></div>
+	</a>
+	<a id="legal1" class="weui-cell weui-cell_access hiddenclass" href="javascript:;">
+		<div id="img8" name="" class="weui-panel__bd">
+		</div>
+		<div class="weui-cell__bd">
+			<p>变更法定代表人(负责人)</p>
+			<p class="p1">(法定代表人或者其他组织负责人发生改变，需提供工商营业执照及法定代表人或其他组织负责人变更证明文件)</p>
+		</div>
+		<div id="bg1" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
 				<use xlink:href="#icon-paizhao"></use>
 			</svg></div>
 	</a>
@@ -131,6 +167,16 @@
 				<use xlink:href="#icon-paizhao"></use>
 			</svg></div>
 	</a>
+	<a id="changeAddress1" class="weui-cell weui-cell_access hiddenclass" href="javascript:;">
+		<div id="img9" name="" class="weui-panel__bd">
+		</div>
+		<div class="weui-cell__bd">
+			<p class="p1">(经营地址未改变，经营地址的名称发生改变，需提供社区或政府相关部门的地址名称变更证明)</p>
+		</div>
+		<div id="bg1" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-paizhao"></use>
+			</svg></div>
+	</a>
 	<a id="family" class="weui-cell weui-cell_access" href="javascript:;">
 		<div id="img5" name="" class="weui-panel__bd">
 		</div>
@@ -139,6 +185,17 @@
 			<p class="p1">(工商营业执照"组成形式"为"家庭成员"的个体商户，持证人在家庭成员间变化的，需提供工商营业执照及工商所出具的家庭成员备案信息证明)</p>
 		</div>
 		<div id="bg5" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-paizhao"></use>
+			</svg></div>
+	</a>
+	<a id="family1" class="weui-cell weui-cell_access hiddenclass" href="javascript:;">
+		<div id="img10" name="" class="weui-panel__bd">
+		</div>
+		<div class="weui-cell__bd">
+			<p>变更家庭经营成员</p>
+			<p class="p1">(工商营业执照"组成形式"为"家庭成员"的个体商户，持证人在家庭成员间变化的，需提供工商营业执照及工商所出具的家庭成员备案信息证明)</p>
+		</div>
+		<div id="bg1" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
 				<use xlink:href="#icon-paizhao"></use>
 			</svg></div>
 	</a>
@@ -199,42 +256,7 @@
 
 			}
 		});
-
-
 		var licenseImg = [];
-
-		// $.post('/ycglj/mobile/user/getUserAuthen.do', {
-
-		// }, function (data) {
-		// if (data == 3) {
-		// 	$.alert({
-		// 		title: "提示",
-		// 		text: "你的资料正在审核中,不能重复提交",
-		// 		onOK: function () {
-		// 			//点击确认
-		// 			location.href = "/ycglj/mobile/asset";
-		// 		}
-		// 	});
-		// } else if (data == 1) {
-		// 	$.alert({
-		// 		title: "提示",
-		// 		text: "你的资料审核",
-		// 		onOK: function () {
-		// 			//点击确认
-		// 			location.href = "/ycglj/mobile/asset";
-		// 		}
-		// 	});
-		// }
-		// });
-		// function getLicense(license) {
-		// 	setActionSheet("license", license);
-		// 	licenseImg.push("img" + license);
-		// }
-
-		// function getBusiness(license) {
-		// 	setActionSheet("business", license);
-		// 	licenseImg.push("zz" + license);
-		// }
 		function saveImg() {
 			//此导出插件返回数组[MIMETYPE，签名的SVG的base64编码字符串划]
 			var datapair = $("#signature").jSignature(
@@ -300,10 +322,8 @@
 					images.serverId = [];
 					function upload() {
 						wx.uploadImage({
-							localId: images.localId[i]
-								.toString(),
-							isShowProgressTips: images.localId[i]
-								.toString(),
+							localId: images.localId[i].toString(),
+							isShowProgressTips: images.localId[i].toString(),
 							success: function (
 								res) {
 								i++;
@@ -393,23 +413,50 @@
 							document.getElementById("img1").innerHTML = "";
 							$("#img1").attr("name", uuid);
 							$("#img1").append(panel);
+							$("#business1").removeClass("hiddenclass");
 						} else if (dataType == "changeName") {
 							document.getElementById("img2").innerHTML = "";
 							$("#img2").attr("name", uuid);
 							$("#img2").append(panel);
+							$("#changeName1").removeClass("hiddenclass");
 						} else if (dataType == "legal") {
 							document.getElementById("img3").innerHTML = "";
 							$("#img3").attr("name", uuid);
 							$("#img3").append(panel);
+							$("#legal1").removeClass("hiddenclass");
 						} else if (dataType == "changeAddress") {
 							document.getElementById("img4").innerHTML = "";
 							$("#img4").attr("name", uuid);
 							$("#img4").append(panel);
+							$("#changeName1").removeClass("hiddenclass");
 						}
 						else if (dataType == "family") {
 							document.getElementById("img5").innerHTML = "";
 							$("#img5").attr("name", uuid);
 							$("#img5").append(panel);
+							$("#family1").removeClass("hiddenclass");
+						}
+						else if (dataType == "business1") {
+							document.getElementById("img6").innerHTML = "";
+							$("#img6").attr("name", uuid);
+							$("#img6").append(panel);
+						}
+						else if (dataType == "changeName1") {
+							document.getElementById("img7").innerHTML = "";
+							$("#img7").attr("name", uuid);
+							$("#img7").append(panel);
+						}else if (dataType == "legal1") {
+							document.getElementById("img8").innerHTML = "";
+							$("#img8").attr("name", uuid);
+							$("#img8").append(panel);
+						}else if (dataType == "changeAddress1") {
+							document.getElementById("img9").innerHTML = "";
+							$("#img9").attr("name", uuid);
+							$("#img9").append(panel);
+						}else if (dataType == "family1") {
+							document.getElementById("img10").innerHTML = "";
+							$("#img10").attr("name", uuid);
+							$("#img10").append(panel);
 						}
 
 					}
@@ -434,20 +481,40 @@
 					}
 				}
 			});
+			//变更营业执照 
 			$('#business').click(function () {
 				setActionSheet("business", license);
 			})
+			$('#business1').click(function () {
+				setActionSheet("business1", license);
+			})
+			//变更姓名
 			$('#changeName').click(function () {
 				setActionSheet("changeName", license);
 			})
+			$('#changeName1').click(function () {
+				setActionSheet("changeName1", license);
+			})
+			//变更法人
 			$('#legal').click(function () {
 				setActionSheet("legal");
 			})
+			$('#legal1').click(function () {
+				setActionSheet("legal1");
+			})
+			//变更地址
 			$('#changeAddress').click(function () {
 				setActionSheet("changeAddress", license);
 			})
+			$('#changeAddress1').click(function () {
+				setActionSheet("changeAddress1", license);
+			})
+			//变更家庭经营成员
 			$('#family').click(function () {
 				setActionSheet("family");
+			})
+			$('#family1').click(function () {
+				setActionSheet("family1");
 			})
 			$("#sign").click(function () {
 				$.modal({
@@ -482,31 +549,14 @@
 				var changeName = "", changeValue = "";
 				var name = $('#name').val();
 				var address = $('#address').val();
-				var img1 = $("#img1").attr("name");
-				var img2 = $("#img2").attr("name");
-				var img3 = $("#img3").attr("name");
-				var img4 = $("#img4").attr("name");
-				var img5 = $("#img5").attr("name");
-				var sign = $('#displayarea').attr("name");
 				var arrays = new Array();
-				if (img1 != "") {
-					arrays.push(img1);
-				}
-				if (img2 != "") {
-					arrays.push(img2);
-				}
-				if (img3 != "") {
-					arrays.push(img3);
-				}
-				if (img4 != "") {
-					arrays.push(img4);
-				}
-				if (img5 != "") {
-					arrays.push(img5);
-				}
-				if (sign != 0) {
-					arrays.push(sign);
-				}
+				$("a div:first-child").each(function (index, element) {
+					var uuid = $(this).attr('name');
+					arrays.push(uuid);
+				});
+				//去除undefined和空值
+				var newArray = arrays.filter(Boolean);
+				console.log(newArray);
 				if (name != "") {
 					changeName = "name"
 					changeValue = name
@@ -515,7 +565,7 @@
 					changeName = "address"
 					changeValue = address
 				}
-				if (arrays.length >= 3) {
+				if (newArray.length >= 3) {
 					$.alert({
 						title: "",
 						text: "不能同时变更多个业务",
@@ -531,7 +581,7 @@
 						{
 							type: 7,
 							license: license,
-							arrays: JSON.stringify(arrays),
+							arrays: JSON.stringify(newArray),
 							changeName: changeName,
 							changeValue: changeValue
 						},
