--- a/src/main/webapp/layuiadmin/check/checkPermission.html
+++ b/src/main/webapp/layuiadmin/check/checkPermission.html
@@ -91,7 +91,7 @@
                 util = layui.util;
             table.render({
                 elem: '#test'
-                , url: '/ycglj/user/getAllWeixinUser.do?'
+                , url: '/ycglj/user/getAllWeixinUser.do?place=1'
                 , title: '微信数据列表'
                 , page: true
                 , cols: [[
