--- a/src/main/webapp/mobile/auditor/case/case_entry.html
+++ b/src/main/webapp/mobile/auditor/case/case_entry.html
@@ -315,7 +315,9 @@
               alert("新建记录失败,至少选择一项违法记录!");
             } else if(text==-5){
             	alert("你没有新建案由权限!");
-            } else {
+            } else if(text==-6){
+            	alert("你所在的中队不符合录入该零售户的权限!");
+            }else {
               alert("新建记录失败!");
             }
           }
